# file-reader-qt

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml
qml/components/: HistogramBar.qml  HistogramView.qml
qml/views/: MainView.qml
src/: controller.cpp  controller.h  filereaderworker.cpp  filereaderworker.h  main.cpp  wordscountermodel.cpp  wordscountermodel.h  wordscounterworker.cpp  wordscounterworker.h  wordstatsmodel.cpp  wordstatsmodel.h
src/abstractworker/: abstractworker.cpp  abstractworker.h
tests/tst_controller/: CMakeLists.txt  tst_controller.cpp
tests/tst_filereaderworker/: CMakeLists.txt  tst_filereaderworker.cpp
tests/tst_wordscountermodel/: CMakeLists.txt  tst_wordscountermodel.cpp
tests/tst_wordscounterworker/: CMakeLists.txt  tst_wordscounterworker.cpp
tests/tst_wordstatsmodel/: CMakeLists.txt  tst_wordstatsmodel.cpp
